# Everland

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: cmake.yml
Everland/include/: Application.h  Block.h  Camera.h  Chunk.h  Core.h  Player.h  Renderer.h  Window.h  World.h
Everland/src/: Application.cpp  Block.cpp  Camera.cpp  Player.cpp  Renderer.cpp  Window.cpp  World.cpp  glad.c  main.cpp
assets/shaders/: fShader.glsl  vShader.glsl
cmake/: AddGoogleTest.cmake
include/: Application.h  Application.hpp  Camera.h  Core.h  Player.h  Player.hpp  Shader.h  Window.hpp  World.hpp
lib/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
resources/shaders/: fragment.glsl  vertex.glsl
src/: Application.cpp  Application.hpp  CMakeLists.txt  Camera.cpp  Camera.h  Camera.hpp  Core.hpp  Game.cpp  Game.hpp  Parser.hpp  Player.cpp  Shader.hpp  Window.cpp  World.cpp  World.hpp  main.cpp
src/logic/: Game.cpp  Game.hpp  Player.cpp  Player.hpp
src/world/: Generator.cpp  Generator.hpp  MeshBuilder.cpp  MeshBuilder.hpp  World.cpp  World.hpp
test/: CMakeLists.txt
test/world/: WorldTest.cpp
